--- a/bai_tap_1.html
+++ b/bai_tap_1.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thông tin cá nhân</title>
 </head>
 <body>
-
+<p>Họ và tên:</p>
+<br>
+<h1>Nông Đức Việt</h1>
+<p>Năm sinh:</p>
+<br>
+<h1>25/02/1995</h1>
+<p>Quê quán:</p>
+<br>
+<h1>Lạng Sơn</h1>
+<div id="content">
+    <h3><u>Giới thiệu bản thân</u></h3>
+    <p>.......................</p>
+</div>
+<p>Đi đến trang cá nhân Facebook </p>
+<button>Click</button>
+<a href="https://www.facebook.com/profile.php?id=100002962816518">Facebook</a>
 </body>
 </html>
