--- a/bai_tap_1.html
+++ b/bai_tap_1.html
@@ -7,19 +7,19 @@
 <body>
 <p>Họ và tên:</p>
 <br>
-<h1>Nông Đức Việt</h1>
+<h4>Nông Đức Việt</h4>
 <p>Năm sinh:</p>
 <br>
-<h1>25/02/1995</h1>
+<h4>25/02/1995</h4>
 <p>Quê quán:</p>
 <br>
-<h1>Lạng Sơn</h1>
+<h4>Lạng Sơn</h4>
 <div id="content">
     <h3><u>Giới thiệu bản thân</u></h3>
     <p>.......................</p>
 </div>
 <p>Đi đến trang cá nhân Facebook </p>
-<button>Click</button>
+<button>Nhấp</button>
 <a href="https://www.facebook.com/profile.php?id=100002962816518">Facebook</a>
 </body>
 </html>
