--- a/bai_tap_1.html
+++ b/bai_tap_1.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Thông tin cá nhân</title>
 </head>
+<style>
+    body {
+        background-image:url("https://images.pexels.com/videos/4822860/black-and-white-background-cool-wallpaper-hd-wallpapers-motion-4822860.jpeg?auto=compress&cs=tinysrgb&h=627&fit=crop&w=1200") ;
+    }
+</style>
 <body>
 <p>Họ và tên:</p>
 <br>
@@ -19,7 +24,25 @@
     <p>.......................</p>
 </div>
 <p>Đi đến trang cá nhân Facebook </p>
-<button>Nhấp</button>
+<label>
+    <input type="text">
+</label>
+<button>Nhấn</button>
 <a href="https://www.facebook.com/profile.php?id=100002962816518">Facebook</a>
+<img src="https://scontent.fsgn2-10.fna.fbcdn.net/v/t1.18169-9/20915231_1641660589276019_368836027281506596_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=7a1959&_nc_ohc=uUXfhIQ86HwAX_gOM6j&_nc_ht=scontent.fsgn2-10.fna&oh=00_AfD5TlJtdCt7OthH1JUBBWQ9mPNuI5j_L0PeR3JpTrBFFQ&oe=659F5260" alt="Ảnh lỗi ">
+<h2>Sở thích có thứ tự </h2>
+<ol>
+    <li>Game</li>
+    <li>Du lịch</li>
+    <li>Cafe</li>
+</ol>
+<h2>Sở thích không có thứ tự </h2>
+<ul>
+    <li>Game</li>
+    <li>Du lịch</li>
+    <li>Cafe</li>
+</ul>
+
+
 </body>
 </html>
